[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fireball.gd" type="Script" id=1]
[ext_resource path="res://sprites/anim/fireball32x32_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/anim/fireball32x32_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/anim/fireball32x32_3.png" type="Texture" id=4]
[ext_resource path="res://sprites/anim/fireball32x32_4.png" type="Texture" id=5]
[ext_resource path="res://sprites/anim/fireball32x32_explode_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/anim/fireball32x32_explode_2.png" type="Texture" id=7]
[ext_resource path="res://sprites/anim/fireball32x32_explode_3.png" type="Texture" id=8]
[ext_resource path="res://sprites/anim/fireball32x32_explode_4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[node name="Fireball" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="FireballAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.21 )
rotation = 1.5708
scale = Vector2( 0.83, 0.76 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="animation_finished" from="FireballAnim" to="." method="_on_FireballAnim_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
